fixed backgrounds on small...

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -267,12 +267,28 @@ i.scroll:hover {
 @media (max-width: 768px) {
 	
   .header {
-	background: url(../img/bg.jpg) no-repeat center center scroll; 
+  display: table;
+  
+  height: 100%;
+  width: 100%;
+  position: relative;
+  background: url(../img/bg.jpg) no-repeat center center scroll; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   }
 
-  .callout {
+ .callout {
+  color: #ffffff;
+  height: 400px;
+  width: 100%;
 	background: url(../img/callout.jpg) no-repeat center center scroll; 
-  }
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
   .map {
 	height: 75%;
